--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -11,27 +11,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A lo largo de este curso se ha experimentado con modelos y vistas para realizar operaciones con HTTP. Sin embargo, como se ha mencionado previamente, *Django* se basa en el patrón *Modelo-Vista-Plantilla* (*MVT* por sus siglas en inglés)."
+    "*Django* es un framework diseñado roimordialmente para desplegar páginas web de forma dinámica mediante el patrón MVT, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una plantilla no es otra cosa más que un documento de texto el cual contiene etiquetas que permiten a *Django* crear contenidos a partir de datos generados en una función de vista."
+    "## Plantillas (templates)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El lenguaje de plantillas de *Django* y *django.template*.\n",
+    "Una plantilla es un documento el cual contiene texto y código que permite a *Django* crear un texto nuevo a partir del original y datos dentro de un *contexto*.\n",
+    "\n",
+    "**Ejemplo:**\n",
+    "\n",
+    "El archivo *src/17/base.html* contiene el siguiente texto que corresponde  una plantilla básicas que combina código en HTML y etiquetas basadas en el *lenguaje de plantillas de Django*.\n",
+    "\n",
+    "``` HTML\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "    <header>\n",
+    "        <meta charset=\"UTF-8\">\n",
+    "        <title>{{ titulo }}</title>\n",
+    "    </header>\n",
+    "    <body>\n",
+    "        {% block cuerpo %}\n",
+    "        <h1>¡Hola, mundo!</h1>\n",
+    "        {% endblock %)\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "\n",
+    "**Nota:**\n",
+    "Aún cuando lo más común es usar HTML, las plantillas de *Django* pueden utilizarse para crear documentos en distintos formatos como *XML*, *YAML*, *JSON*, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El lenguaje de plantillas de *Django* (*DTL*).\n",
     "\n",
     "El lenguaje de plantillas de *Django* (*DTL* por sus siglas en inglés) permiten modificar a un  documento que contiene código basado en dicho lenguaje, ejecutándolo junto con datos externos que son asignados como si fueran variables globales.\n",
     "\n",
     "El *DTL* reconoce los tipos básicos de Python.\n",
     "\n",
-    "### Etiquetas básicas.\n",
+    "### Tipos de etiquetas.\n",
     "\n",
     "El *DTL* utiliza etiquetas, la cuales se conforman por código encerrado entre llaves \"_{_\" y \"*}*\".\n",
     "\n",
@@ -82,19 +111,10 @@
    "source": [
     "### La clase  *django.template.Template*.\n",
     "\n",
-    "Esta clase permite crear un objeto capaz de ejecutar el código basado en el *DTL* a partir de una cadena de caracteres."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ### El método *render()*.\n",
-    " \n",
-    " Los objetos instanciadosa de *django.template.Template* cuentan con el método render, el cuale s cpaaz de ejecutar el código dentro de la plantilla, cuando se ingresa in objeto instanciado de *django.template.Context* de la siguiente manera:\n",
-    " \n",
-    " ```python\n",
-    "<plantilla>.render(context=<objeto instanciado de Context>)\n",
+    "Esta es la clase primordial para el manejo de plantillas y permite crear un objeto capaz de ejecutar el código basado en *DTL* a partir de una cadena de caracteres, la cual corresponde al contenido de una plantilla.\n",
+    "\n",
+    "```\n",
+    "Template(<objeto str>)\n",
     "```"
    ]
   },
@@ -104,7 +124,11 @@
    "source": [
     "### La clase  *django.template.Context*.\n",
     "\n",
-    "Esta clase permite crear definir un objeto de tipo *dict*, que define las variables globales que puede utilizar una plantilla."
+    "Esta clase permite crear definir el diccionario de contexto que consumirá la plantilla al ser procesada.\n",
+    "\n",
+    "```\n",
+    "Context(<objeto tipo dict>)\n",
+    "```"
    ]
   },
   {
@@ -122,6 +146,81 @@
     "contexto = Context({'nombre': 'mundo'})\n",
     "plantilla.render(context=contexto)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El módulo *django.template.loader* .\n",
+    "\n",
+    "Este módulo permite cargar un documento que contiene una plantilla y contiene las funciones:\n",
+    "\n",
+    "* *get_template()*, el cual permite \n",
+    "* *select_template()*\n",
+    "* *render_to_string()*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/17/base.ht ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module django.template.loader in django.template:\n",
+      "\n",
+      "NAME\n",
+      "    django.template.loader\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    get_template(template_name, using=None)\n",
+      "        Load and return a template for the given name.\n",
+      "        \n",
+      "        Raise TemplateDoesNotExist if no such template exists.\n",
+      "    \n",
+      "    render_to_string(template_name, context=None, request=None, using=None)\n",
+      "        Load a template and render it with a context. Return a string.\n",
+      "        \n",
+      "        template_name may be a string or a list of strings.\n",
+      "    \n",
+      "    select_template(template_name_list, using=None)\n",
+      "        Load and return a template for one of the given names.\n",
+      "        \n",
+      "        Try names in order and return the first template found.\n",
+      "        \n",
+      "        Raise TemplateDoesNotExist if no such template exists.\n",
+      "\n",
+      "DATA\n",
+      "    engines = <django.template.utils.EngineHandler object>\n",
+      "\n",
+      "FILE\n",
+      "    /home/oi/pythonista/lib/python3.6/site-packages/django/template/loader.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(django.template.loader)"
    ]
   },
   {
