--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -419,6 +419,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -435,7 +446,7 @@
    "source": [
     "* El *endpoint* http://localhost:5000/api/carga cargará los datos, creará los objetos y poblará la base de datos.\n",
     "\n",
-    "**ADVERTENCIA:** Este *endpoint* sólodebe de usarse una vez. \n",
+    "**ADVERTENCIA:** Este *endpoint* sólo debe de usarse una vez. \n",
     "\n",
     "* El *endpoint* http://localhost:5000/api/ regresará el estado de todos los objetos en formato *JSON*.\n"
    ]
