--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -152,22 +152,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El módulo *django.template.loader* .\n",
+    "## Configuración de las plantillas.\n",
     "\n",
-    "Este módulo permite cargar un documento que contiene una plantilla y contiene las funciones:\n",
+    "El archivo *tutorial/tutorial/settings.py* contiene una sección que define la configuración de las plantillas de forma similar a lo siguiente:\n",
     "\n",
-    "* *get_template()*, el cual permite \n",
-    "* *select_template()*\n",
-    "* *render_to_string()*\n"
+    "``` python\n",
+    "TEMPLATES = [{'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
+    "  'DIRS': [],\n",
+    "  'APP_DIRS': True,\n",
+    "  'OPTIONS': {'context_processors': ['django.template.context_processors.debug',\n",
+    "    'django.template.context_processors.request',\n",
+    "    'django.contrib.auth.context_processors.auth',\n",
+    "    'django.contrib.messages.context_processors.messages']}}]\n",
+    "```\n",
+    "### Configuración del directorio de plantillas.\n",
+    "\n",
+    "La lista correspondiente al nombre *DIRS* contiene la lista de directorios a los que puede consultar Django en busca de una plantilla."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%cp src/17/base.ht ml"
+    "**Ejemplo:**\n",
+    "\n",
+    "El archivo *src/17/settings.py* contiene la siguiente configuración de directorios:\n",
+    "\n",
+    "``` python\n",
+    "'DIRS': [BASE_DIR + '/templates/'],\n",
+    "```\n",
+    "\n",
+    "En el que *BASE_DIR* corresponde al directorio base del proyecto de *Django*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustituirá al archivo *tutorial/tutorial/settings.py* con el archivo *src/17/settings.py*."
    ]
   },
   {
@@ -175,52 +197,307 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%cp src/17/settings.py tutorial/tutorial/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La nueva configuració puede ser vista de la siguiente manera:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module django.template.loader in django.template:\n",
-      "\n",
-      "NAME\n",
-      "    django.template.loader\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    get_template(template_name, using=None)\n",
-      "        Load and return a template for the given name.\n",
-      "        \n",
-      "        Raise TemplateDoesNotExist if no such template exists.\n",
-      "    \n",
-      "    render_to_string(template_name, context=None, request=None, using=None)\n",
-      "        Load a template and render it with a context. Return a string.\n",
-      "        \n",
-      "        template_name may be a string or a list of strings.\n",
-      "    \n",
-      "    select_template(template_name_list, using=None)\n",
-      "        Load and return a template for one of the given names.\n",
-      "        \n",
-      "        Try names in order and return the first template found.\n",
-      "        \n",
-      "        Raise TemplateDoesNotExist if no such template exists.\n",
-      "\n",
-      "DATA\n",
-      "    engines = <django.template.utils.EngineHandler object>\n",
-      "\n",
-      "FILE\n",
-      "    /home/oi/pythonista/lib/python3.6/site-packages/django/template/loader.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(django.template.loader)"
+    "from tutorial.tutorial import settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.TEMPLATES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La definición de directorios de plantillas es la siguiente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.TEMPLATES[0]['DIRS']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Sindo el valor de *BASE_DIR* el siguiente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.BASE_DIR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El módulo *django.template.loader* .\n",
+    "\n",
+    "Este módulo permite cargar documentos que contiene una plantillas e incluso procesarlos.\n",
+    "\n",
+    "### La función *django.template.loader.get_template()*, \n",
+    "\n",
+    "La cual permite cargar una plantilla a partir de un archivo que se encuentre dentro de las rutas predefinidas.\n",
+    "\n",
+    "``` python \n",
+    "get_template('<archivo>')\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### La función *django.template.loader.select_template()*, \n",
+    "\n",
+    "La cual permite cargar la primera plantilla dentro de una ruta predefinida que encuentra dentro de una lista.\n",
+    "\n",
+    "``` python \n",
+    "get_template(['<archivo 1 >', '<archivo 2 >'... '<archivo n >'] )\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### La función *django.template.loader.render_to_string()*, \n",
+    "\n",
+    "La cual permite cargar una plantilla dentro de una ruta predefinida y procesarla utilizando un objeto tipo *dict* como contexto.\n",
+    "\n",
+    "``` python \n",
+    "render_to_string('<archivo>', <contexto>)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "El archivo *src/17/base.html* contiene el siguiente contenido, el cuaol mezcla código *HTML* con código *DTL*:\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "    <header>\n",
+    "        <meta charset=\"UTF-8\">\n",
+    "        <title>{{ titulo }}</title>\n",
+    "    </header>\n",
+    "    <body>\n",
+    "        {% block cuerpo %}\n",
+    "        <h1>¡Hola, {{nombre}}!</h1>\n",
+    "        {% endblock %}\n",
+    "    </body>\n",
+    "</html>\n",
+    "```` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda copiará el archivo *src/17/base.html* al directorio *tutorial/templates*, el cual fue definido en *settings.py* como un directorio de plantillas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/17/base.html tutorial/templates/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%cat tutorial/templates/base.html "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En un shell de *Django* ejecute el siguiente código:\n",
+    "```python\n",
+    "from django.template.loader import render_to_string\n",
+    "contexto = {\"titulo\":\"Página de prueba\", \"nombre\":\"extraño\"}\n",
+    "print(render_to_string(\"base.html\", contexto))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El resultado será:\n",
+    "``` html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "    <header>\n",
+    "        <meta charset=\"UTF-8\">\n",
+    "        <title>Página de prueba</title>\n",
+    "    </header>\n",
+    "    <body>\n",
+    "\n",
+    "        <h1>¡Hola, extraño!</h1>\n",
+    "\n",
+    "    </body>\n",
+    "</html>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Publicación de una plantilla como resultado de una función de vista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función *django.shortcuts.render_to_response* permite que una función de vista envíe a un cliewnte un documento creado a partir de una plantilla y un contexto específico:\n",
+    "\n",
+    "``` python\n",
+    "render_to_response(<plantilla>, context=<contexto>, content_type=<tipo de contenido>, status=<estado>)\n",
+    "```\n",
+    "Donde:\n",
+    "\n",
+    "* *plantilla* es el nombnre del archivo que contiene a la plantilla y que debe de estar localizado en algún direcotorio configurado para acceder a estas.\n",
+    "* *context* es un objeto de tipo *dict* que contiene el contexto.\n",
+    "* *content-type* es un parámetro opcional que indica el tipo de contenido del que se trata.\n",
+    "* *status* corresponde al mensaje de estado que se eviará junto con el contenido. El valor po defecto es *200*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo *src/17/views.py* contiene, entre otras, a la función *saluda()* la cual corresponde al siguiente código:\n",
+    "\n",
+    "``` python \n",
+    "def saluda(request, nombre):\n",
+    "    return render_to_response('base.html', {titulo=\"Prueba de plantilla\", nombre: nombre})\n",
+    "```\n",
+    "\n",
+    "Esta función realizará lo siguiente: \n",
+    "* Obtendrá una cadena de caracteres correspondiente al segmento final de la URL *main/claves/* siempre que sea alfanumérico.\n",
+    "* Cargará al archivo *tutorial/templates/base.html* como una plantilla.\n",
+    "* Procesará la plantilla con el contexto dado.\n",
+    "* Enviará el contenido a un cliente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustiruirá al archivo *tutorial/main/views.py* con el archivo *src/17/views.py*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp src/17/views.py tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inicie el servidor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./manage.py runserver 0.0.0.0:5000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cualquier URL que al final de *main/claves/* contenga caracteres alfanuméricos, regresará un documento HTML generado mediante la función saluda.\n",
+    "\n",
+    "* El elemento *&lt;title&gt;* del código *HTML* contiene el texto *Prueba de plantilla*. \n",
+    "* EL segmento de la URL capturado se deplegará en un mensaje de saludo.\n",
+    "\n",
+    "http://localhost:5000/main/claves/Juan"
    ]
   },
   {
