--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Django](https://www.djangoproject.com/) es el marco de trabajo (framework) para desarrollo de aplicaciones web basado en Python de mayor popularidad y uno de los más [populares en general](https://hotframeworks.com/).\n",
+    "[*Django*](https://www.djangoproject.com/) es el marco de trabajo (framework) para desarrollo de aplicaciones web basado en Python de mayor popularidad y uno de los más [populares en general](https://hotframeworks.com/).\n",
     "\n",
     "Su lema es: \"El framework web para perfeccionistas con plazos de entrega\".\n",
     "\n",
-    "A diferencia de microframeworks como [Flask](http://flask.pocoo.org/), *Django* viene con una basta cantidad de módulos y funcionalidades disponibles desde la instalación.\n",
+    "A diferencia de microframeworks como [*Flask*](http://flask.pocoo.org/), *Django* viene con una basta cantidad de módulos y funcionalidades disponibles desde la instalación.\n",
     "\n",
     "Entre otras cosas, *Django* cuenta con las siguientes funcionalidades:\n",
     "\n",
@@ -251,7 +251,7 @@
     "\n",
     "A continuación se ejecutará el servidor web de *Django*, el cual desplegará una página genérica.\n",
     "\n",
-    "El servidor de *Django* está comfigurado para atender peticiones de *localhost* en el puerto *8000*, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto *5000*.\n",
+    "El servidor de *Django* está configurado para atender peticiones de *localhost* en el puerto *8000*, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP en el puerto *5000*.\n",
     "\n",
     "**Nota:** \n",
     "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto *5000*. \n",
