--- a/04_configuracion_del_proyecto.ipynb
+++ b/04_configuracion_del_proyecto.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "## El archivo *settings.py*.\n",
     "\n",
-    "La configuración básica de un proyecto de Django se encuentra en un archivo de Python llamado *settings.py* \n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un archivo de Python llamado *settings.py* \n",
     "\n",
     "En el caso del proyecto creado previamente, dicho archivo se encuentra en [*tutorial/tutorial/settings.py*](tutorial/tutorial/settings.py)"
    ]
