--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sincronizando las bases de datos.\n",
+    "## Sincronizando la bases de datos.\n",
     "\n",
     "El subcomando *migrate* del gestos de *manage.py* permite dar de alta y sincronizar cada bases de datos a partir del indentificador definido en *settings.py*.\n",
     "\n",
