--- a/09_modelos.ipynb
+++ b/09_modelos.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Asignación de mombres de los campos de una tabla con respecto a los atributos de una clase.\n",
+    "## Asignación de nombres de los campos de una tabla con respecto a los atributos de una clase.\n",
     "\n",
     "Al crear una clase con "
    ]
@@ -115,7 +115,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *tutorial/main/models.py* es el indicado para definir los modelos "
+    "El archivo *tutorial/main/models.py* es el indicado para definir los modelos."
    ]
   },
   {
