--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -198,14 +198,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/17/settings.py tutorial/tutorial/"
+    "%cp src/17/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La nueva configuració puede ser vista de la siguiente manera:"
+    "* La nueva configuración puede ser vista de la siguiente manera:"
    ]
   },
   {
@@ -256,6 +256,15 @@
    "outputs": [],
    "source": [
     "settings.BASE_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir tutorial/templates"
    ]
   },
   {
