--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -11,27 +11,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El *DTL* es un lenguaje compatible con los tipos y objetos de Python que cuenta con los siguientes elementos:\n",
+    "El *DTL* es un lenguaje extendido de Python y por lo tanto, puede realizar algunas operaciones cuando se ingresan objetos de Python como elementos de un contexto.\n",
     "\n",
-    "* Expresiones.\n",
-    "* Declaraciones.\n",
-    "* Filtros.\n",
-    "* Definiciónc y sustitución de bloques.\n",
-    "* Herencia de contenidos."
+    "Cabe hacer notar que los valores que puede manipular el *DTL* siempre serán convertidos a una cadena de caracteres.\n",
+    "\n",
+    "## Operaciones que se pueden realizar con el *DTL*.\n",
+    "\n",
+    "Las plantillas que incluyen código basado en el *DTL* puede realizar las siguientes operaciones.\n",
+    "\n",
+    "* Acceder a los objetos ingresados en un contexto de forma similar a como Python accede al espacio de nombres del ámbito global.\n",
+    "* Acceder a atributos y métodos de los objetos.\n",
+    "* Ejecutar expresiones utilizando de filtros.\n",
+    "* Delimitar bloques.\n",
+    "* Ejecutar declaraciones condicionales.\n",
+    "* Realizar ciclos.\n",
+    "* Delimitar bloques de texto.\n",
+    "* Heredar de contenidos.\n",
+    "\n",
+    "## Operaciones que no puede realizar el *DTL*.\n",
+    "\n",
+    "* Ejecutar expresiones numéricas.\n",
+    "* Definir variables en un ámbito global.\n",
+    "* Definir funciones o macros.\n",
+    "* Acceder a elementos de una colección mediante la sintaxis de indices usando corchetes.\n",
+    "\n",
+    "Referencia:https://docs.djangoproject.com/en/2.1/ref/templates/builtins/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Declaraciones."
+    "## Expresiones y filtros.\n",
+    "\n",
+    "Las expresiones se definen con la siguiente sintaxis:\n",
+    "\n",
+    "```\n",
+    "{{ <expresión> }}\n",
+    "```\n",
+    "\n",
+    "Una expresión debe de implicar al menos un elemento que será convertido en una cadena de caracteres. Este elemento puede ser:\n",
+    "\n",
+    "* Un objeto de Python ligado a un nombre.\n",
+    "* Un atributo de un objeto de Python.\n",
+    "* El resultado de la ejecuciónde un método de un objeto de Python.\n",
+    "\n",
+    "### Filtros.\n",
+    "\n",
+    "*ETL* no soporta los operadores de Python para interpretar expresiones, sino que utiliza una serie de filtros mediante la siguiente sintaxis.\n",
+    "\n",
+    "```\n",
+    "{{ <elemento>|<filtro 1>:\"<argumento>\"|<filtro 2>:\"<argumento>\"| ... |<filtro n>:\"<argumento>\" \n",
+    "```\n",
+    "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
+    "* Los filtros pueden incluir argumentos.\n",
+    "\n",
+    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/2.1/ref/templates/builtins/#built-in-filter-reference."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Condicionales con *if*.\n",
+    "## La declaración *filter*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La declaración *comment*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La declaración con *if*.\n",
     "\n",
     "Esta declaración permite evaluar declaraciones lógicas similares a las usadas en Python.\n",
     "\n",
@@ -71,7 +127,7 @@
     "``` python\n",
     "from django.template import Template, Context\n",
     "\n",
-    "plantilla = \"Hola {{persona['nombre']}}.\\n\\\n",
+    "plantilla = \"Hola {{ persona['nombre'] }}.\\n\\\n",
     "{% if persona['status'] == 'socio' %}\\\n",
     "Usted es socio distinguido.\\\n",
     "{% elif persona['status'] == 'cliente' %}\\\n",
@@ -80,12 +136,19 @@
     "Por favor indique si es socio o cliente.\\\n",
     "{% endif %}\"\n",
     "\n",
-    "persona={'nombre' :'Juan Pérez', 'status':'cliente'}\n",
+    "persona={'nombre':'Juan Perez', 'status':'cliente'}\n",
     "\n",
-    "contexto = Context({persona})\n",
-    "contenido = Templaste(plantilla)\n",
+    "contexto = Context({\"persona\": persona})\n",
+    "contenido = Template(plantilla)\n",
     "contenido.render(pantilla, context=contexto)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Declaraciones de iteraciones."
    ]
   },
   {
@@ -127,6 +190,48 @@
     "ligas = [['slashdot', 'https://slashdot.org'], \n",
     "         ['pythonista', 'https://pythonista.mx'], \n",
     "         ['cloudevel', 'https://cloudevel.com']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La estructura *for..empty*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La declaración *cycle*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La declaración *resetcycle*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La declaración *with*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La declaración *block*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La declaración *include*."
    ]
   },
   {
@@ -203,17 +308,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "entorno = jinja2.Environment(loader=jinja2.FileSystemLoader('/opt/pythonista/py201/plantillas'))\n",
-    "plantilla = entorno.get_template(\"plantilla_base.html\")\n",
-    "print(plantilla.render())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,7 +336,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2018.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
    ]
   }
  ],
