--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "### Filtros.\n",
     "\n",
-    "*ETL* no soporta los operadores de Python para interpretar expresiones, sino que utiliza una serie de filtros mediante la siguiente sintaxis.\n",
+    "El *DTL* no soporta los operadores de Python para interpretar expresiones, sino que utiliza una serie de filtros mediante la siguiente sintaxis.\n",
     "\n",
     "```\n",
     "{{ <elemento>|<filtro 1>:\"<argumento>\"|<filtro 2>:\"<argumento>\"| ... |<filtro n>:\"<argumento>\" \n",
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La declaración *with*."
+    "## La declaración *with*."
    ]
   },
   {
@@ -320,15 +320,6 @@
     "    &copy; Copyright 2018 <a href=\"https://cloudevel.com/\">Cloudevel.</a>.\n",
     "{% endblock %}\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filtros.\n",
-    "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/templates/builtins/#built-in-filter-reference"
    ]
   },
   {
