--- a/19_gestion_de_formas.ipynb
+++ b/19_gestion_de_formas.ipynb
@@ -8,18 +8,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://docs.djangoproject.com/en/2.1/topics/forms/"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://tutorial.djangogirls.org/en/django_forms/"
+   ]
   },
   {
    "cell_type": "code",
