--- a/11_json_con_django.ipynb
+++ b/11_json_con_django.ipynb
@@ -337,16 +337,19 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *src/11/urls.py* incluye una ruta apuntando a *main/path* y ligándola a la función de vista *views.respuesta_json()*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cat src/11/urls.py"
+    "El archivo *src/11/urls.py* incluye una ruta apuntando a *main/path* y ligándola a la función de vista *views.respuesta_json()*.\n",
+    "\n",
+    "``` python\n",
+    "from django.urls import path, re_path \n",
+    "from . import views\n",
+    "\n",
+    "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
+    "               path('calif', views.calificaciones),\n",
+    "               re_path(r'^claves/(?P<clave>[0-9]{4}$)', views.clave),\n",
+    "               path('claves/<int:numero>', views.numero),\n",
+    "               path('claves/<str:nombre>', views.saluda),\n",
+    "               path('json', views.respuesta_json)]\n",
+    "```"
    ]
   },
   {
@@ -362,7 +365,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp src/11/urls.py tutorial/main/urls.py"
+    "%cp src/11/urls.py tutorial/main/urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/urls.py"
    ]
   },
   {
@@ -393,6 +405,15 @@
    "outputs": [],
    "source": [
     "%cp src/11/views.py tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/views.py"
    ]
   },
   {
