--- a/12a_operaciones_con_http.ipynb
+++ b/12a_operaciones_con_http.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/urls.py "
+    "%cat tutorial/main/views.py "
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
