--- a/17_las_plantillas_de_django.ipynb
+++ b/17_las_plantillas_de_django.ipynb
@@ -309,7 +309,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *src/17/base.html* contiene el siguiente contenido, el cual mezcla código *HTML* con código *DTL*:\n",
+    "El archivo *src/17/ejemplo.html* contiene el siguiente texto, el cual mezcla código *HTML* con código *DTL*:\n",
     "\n",
     "```html\n",
     "<!DOCTYPE html>\n",
@@ -320,11 +320,11 @@
     "    </header>\n",
     "    <body>\n",
     "        {% block cuerpo %}\n",
-    "        <h1>¡Hola, {{nombre}}!</h1>\n",
+    "        <h1>¡Hola, {{ nombre }}!</h1>\n",
     "        {% endblock %}\n",
     "    </body>\n",
     "</html>\n",
-    "```` "
+    "```"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/17/base.html tutorial/templates/"
+    "%cp src/17/ejemplo.html tutorial/templates/"
    ]
   },
   {
@@ -351,7 +351,7 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/base.html "
+    "%cat tutorial/templates/ejemplo.html "
    ]
   },
   {
@@ -359,10 +359,11 @@
    "metadata": {},
    "source": [
     "* En un shell de *Django* ejecute el siguiente código:\n",
-    "```python\n",
+    "\n",
+    "``` python\n",
     "from django.template.loader import render_to_string\n",
-    "contexto = {\"titulo\":\"Página de prueba\", \"nombre\":\"extraño\"}\n",
-    "print(render_to_string(\"base.html\", contexto))\n",
+    "contexto = {'titulo':'Página de prueba', 'nombre':'extraño'}\n",
+    "print(render_to_string(\"ejemplo.html\", contexto))\n",
     "```"
    ]
   },
@@ -426,7 +427,7 @@
     "\n",
     "``` python \n",
     "def saluda(request, nombre):\n",
-    "    return render_to_response('base.html', {titulo=\"Prueba de plantilla\", nombre: nombre})\n",
+    "    return render_to_response('ejemplo.html', {titulo=\"Prueba de plantilla\", nombre: nombre})\n",
     "```\n",
     "\n",
     "Esta función realizará lo siguiente: \n",
