--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -39,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**"
+    "**Ejemplo:**\n",
+    "\n",
+    "El paquete *django.backends* contiene los conectores a diversas bases de datos."
    ]
   },
   {
@@ -269,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
+    "* La siguiente celda se conectará al servidor utilizando *mysql-connector-python*.\n",
     "\n",
     "**Nota:** En caso de que la contraseña del usuario *root* sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
    ]
@@ -287,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente celda creará la base de datos con nombre *db_django*."
+    "* La siguiente celda creará la base de datos con nombre *db_django*."
    ]
   },
   {
@@ -299,7 +301,14 @@
    "outputs": [],
    "source": [
     "%%sql \n",
-    "CREATE DATABASE db_django;"
+    "create database db_django;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará todas las bases de datos de *MariaDB*."
    ]
   },
   {
@@ -308,7 +317,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SHOW DATABASES;"
+    "%sql show databases;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el contenido de la base de datos *db_django*, la cual está vacía."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "use db_django;\n",
+    "show tables;"
    ]
   },
   {
@@ -352,6 +379,24 @@
    "outputs": [],
    "source": [
     "! ./manage.py migrate --database=default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el contenido de la base de datos *db_django*, la cual ha sido poblada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "use db_django;\n",
+    "show tables;"
    ]
   },
   {
